# TensolR

./: README.md  dev.notes.md  docs.md  folder.structure.txt  requirements.txt  run_examples.py  setup.py  test_fix.py
examples/: complex_nn_example.py  computation_graph_example.py  hello_tensor.py  mlir_optimization_example.py  optimizer_comparison_example.py  tensor_operations_example.py  train_minimodel.py
src/: __init__.py  global_graph.py  graph.py  mlir_emitter.py  node.py  tensor.py
src/api/: __init__.py  nn.py  optim.py
src/monitor/: __init__.py  index.html  main.py  monitor_service.py  requirements.txt  run_monitor.py  test_monitoring.py
src/passes/: dce.py  fusion.py
src/runners/: cpu_runner.py  gpu_runner.py
src/tests/: forward_backward.py  test_tensolr.py
tests/: test_tensolr.py
tokenizer/: Cargo.toml  __init__.py  lib.rs  mod.rs  tensolr_tokenizer.rs
