[package]
name = "tensolr_tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tensolr_tokenizer"
crate-type = ["cdylib"]  # This creates a dynamic library that can be imported by Python

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }